fixed mobile alignments

--- a/src/common/components/rc-info/_index.scss
+++ b/src/common/components/rc-info/_index.scss
@@ -4,6 +4,7 @@
 
     @media (max-width: 500px) {
         gap: 15px;
+        flex-direction: column;
     }
 
     @media (max-width: 991px) {
@@ -16,14 +17,16 @@
         align-items: center;
         flex-direction: row;
         gap: 15px;
+        
+        @media (max-width: 991px) {
+            flex-direction: column;
+            width: 300px;
+        }
 
         @media (max-width: 500px) {
             flex-direction: column;
         }
         
-        @media (max-width: 991px) {
-            flex-direction: column;
-        }
         .circle{
             width: 160px;
             height: 160px;
@@ -63,11 +66,15 @@
         .percentage-info{
             display: flex;
             flex-direction: column;
+            justify-content: flex-start;
             gap: 10px;
+
+            @media (max-width: 991px) {
+                flex-direction: column;
+            }
 
             .unused{
                 display: flex;
-                justify-content: center;
                 align-items: center;
                 flex-direction: row;
                 gap: 10px;
@@ -81,7 +88,6 @@
             }
             .used{
                 display: flex;
-                justify-content: center;
                 align-items: center;
                 flex-direction: row;
                 gap: 10px;
